# BEAR-RAEL

./: .gitignore  Dockerfile  README.md  app.py  client.py  deploy_to_hf.py  final_metrics.txt  inference.py  inference_output.txt  models.py  openenv.yaml  pyproject.toml  raw_scores.txt  requirements.txt  scores.txt  scores2.txt  validator.py  validator_out.txt
api/: server.py
env/: belief.py  dynamics.py  environment.py
graders/: grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
